testsuite/good/decorators/test_decorator_polymorphic_2/A.flux
decorable type A {
   void methodA();
}