testsuite/bad/_TypeWithReservedIdentifier.flux
// type name can't start with underscore
type _TypeWithReservedIdentifier {
   void someMethod();
}